# Gemma-shell

./: .gitignore  ALIASES_DOCS.md  README.md  agent_aliases.sh  demo_ia_agent.py  demo_study_partner.py  demo_tts.py  ia_agent.py  main.py  pyproject.toml  questionnaires.json  run_study_partner.py  sample_questions.json  study_partner.py  test_study_partner.py  test_tts.py  tts_response.py
